--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.0.2.BUILD-SNAPSHOT</version>
+		<version>1.5.12.RELEASE</version>
 		<relativePath />
 	</parent>
 
